--- a/Magazine_Joao/public/css/estilo.css
+++ b/Magazine_Joao/public/css/estilo.css
@@ -1,8 +1,27 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .cabecalho{
-    height: 100px;
-    width: 100%;
-    background-color: rgb(255, 102, 0);
+    background-color: rgb(0, 0, 0);
 }
 .cor{
     color: aqua;
+}
+
+.pesquisa_cabecalho{
+    background-color: rgb(255, 157, 92);
+    border: none;
+    border-radius: 4px;
+    height: 2rem;
+    outline: none;
+    width: 50rem;
+}
+
+.logo{
+    height: 2rem;
+}
+
+.laranja{
+    color: #ff6100;
+    font-size: 2rem;
 }
