--- a/Magazine_Joao/public/css/estilo.css
+++ b/Magazine_Joao/public/css/estilo.css
@@ -8,6 +8,7 @@ body{
     background-color: #ff6100;
     height: 2rem;
     border: none;
+    margin-bottom: 1rem;
 }
 
 .pesquisa_cabecalho{
@@ -28,7 +29,15 @@ body{
     font-size: 2rem;
 }
 
+.background-laranja{
+    background-color: #ff6100 !important;
+}
+
 .botao:hover{
+    cursor: pointer;
+}
+
+.menu:hover{
     cursor: pointer;
 }
 
@@ -49,8 +58,19 @@ body{
     background-color: #ff6100;
 }
 
+.card{
+    border: none !important;
+}
+
+.card-img-top{
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+}
+
 .card-body{
     background-color: #ff6100;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .m05{
@@ -60,4 +80,9 @@ body{
 
 .padding-7{
     padding-top: 7px;
+}
+
+#myModal{
+    width: 50%;
+    margin-top: 8.4rem;
 }
