--- a/Magazine_Joao/public/css/estilo.css
+++ b/Magazine_Joao/public/css/estilo.css
@@ -193,3 +193,19 @@ a:hover{
 .li-menu{
     cursor: pointer;
 }
+
+.telaLogin{
+    margin-top: 10%;
+}
+
+.img-produto{
+    margin-top: 10%;
+    border: solid #ff6100 2px;
+    border-radius: 8px;
+    height: 33rem;
+    margin-left: 5%;
+}
+
+img {
+    object-fit: contain;
+}
